@@ -27,13 +27,5 @@ sub linker_flags {
 	return @ret;
 }
 
-sub post_action {
-	my ($self, $from, $to, %opts) = @_;
-	my @ret = $self->SUPER::post_action(%opts);
-	my $manifest = $opts{manifest} // "$to.manifest";
-	push @ret, ExtUtils::Builder::Action::Command->new(command => [ 'if', 'exist', $manifest, 'mt', '-nologo', '-manifest', $manifest, "-outputresource:$to;2" ]);
-	return @ret;
-}
-
 1;
 
